<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deliverybot_sensors</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="roboticsunveiled@gmail.com">foiegreis</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>pcl</depend> -->
  <!-- <depend>pcl_conversions</depend> -->
  <depend>tf2_sensor_msgs</depend>
  <depend>numpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
